<resources>
    <string name="app_name">Tetramine</string>
    <string name="version">Version: 0.6</string>
    <string name="not_available">not available</string>

    <string name="play">Play</string>
    <string name="resume">Resume Game</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings &amp; Appearance</string>
    <string name="about">About</string>

    <string name="game_over" translatable="false">GAME OVER</string>
    <string name="o_score_o" translatable="false">Score</string>
    <string name="o_lines_o" translatable="false">Lines</string>
    <string name="view_game">View Game</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="help">Help with controllers</string>
    <string name="help_text">
"""To control a falling piece, just swipe your finger on the game board - the piece will move in the same direction as your finger. It is not necessary to touch the piece itself: moving on any part of the board will make it move in the direction your finger moves.

If you simply press the board (without swiping), the piece will rotate.

Movement sensitivity can be set separately for left/right and down movement in the game settings.
"""</string>

    <string name="choose_mode">Choose mode</string>
    <string name="classic_mode">Classic Game</string>
    <string name="classic_mode_desc">Classic version of the game</string>
    <string name="practice_mode">Practice Experience</string>
    <string name="practice_mode_desc">Practice playing at a certain tempo or just relax</string>
    <string name="sprint_mode">Sprint 40 Line</string>
    <string name="sprint_mode_desc">How fast can you clear 40 lines</string>
    <string name="modern_mode">Modern With Freeze</string>
    <string name="modern_mode_desc">Modern Game with random speed, freezes and bombs</string>

    <string name="page_total">Total</string>
    <string name="page_game">Best</string>
    <string name="score">Score</string>
    <string name="lines">Lines</string>
    <string name="pieces">Pieces</string>
    <string name="four_lines">Four Lines</string>
    <string name="t_spins">T Spins</string>
    <string name="combo">Combo</string>
    <string name="zero">0</string>

<!--    <string name="theme">Theme</string>-->
<!--    <string-array name="theme_array">-->
<!--        <item>Dynamic theme</item>-->
<!--        <item>Light</item>-->
<!--        <item>Dark</item>-->
<!--    </string-array>-->
<!--    <string name="show_ghost">Show ghost piece</string>-->
<!--    <string name="show_only_numbers">Show only number of score and lines</string>-->
<!--    <string name="sounds">Sounds</string>-->
<!--    <string name="music">Music</string>-->
<!--    <string name="vibration">Vibration</string>-->
<!--    <string name="control_type">Control Type</string>-->
<!--    <string-array name="control_type_array">-->
<!--        <item>Touch Gestures</item>-->
<!--        <item>Screen Buttons</item>-->
<!--    </string-array>-->
<!--    <string name="bi_directional_rotation">2-direction rotation</string>-->

    <string name="about_1">This is the mobile modern version of tetris</string>
    <string name="about_2">"""This is a classic arcade puzzle game where you have to stack falling tetromino — 4-block pieces, create solid lines out of them and play for the score.
The original mechanics are retained here, with smooth controls, but with a modern, minimalist design
"""</string>
    <string name="author">Author:</string>
    <string name="source_code">Source code:</string>

</resources>