<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChooseMode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardButton">

            <LinearLayout
                android:id="@+id/classic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                    android:textAlignment="center"
                    android:text="@string/classic_mode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:text="@string/classic_mode_desc" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/practice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                    android:textAlignment="center"
                    android:text="@string/practice_mode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:text="@string/practice_mode_desc" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                    android:textAlignment="center"
                    android:text="@string/sprint_mode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:text="@string/sprint_mode_desc" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/modern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
                    android:textAlignment="center"
                    android:text="@string/modern_mode" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:text="@string/modern_mode_desc" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>