<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.Statistics">

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="8dp"
        app:checkedChip="@id/total"
        app:chipSpacingHorizontal="0dp"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/total"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_total"
            android:textSize="22sp"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Corner.Left" />

        <com.google.android.material.chip.Chip
            android:id="@+id/one_game"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_1game"
            android:textSize="22sp"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Corner.Right" />

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score"
                style="@style/StatisticsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <TextView
                android:id="@+id/lines"
                style="@style/StatisticsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lines" />

            <TextView
                android:id="@+id/pieces"
                style="@style/StatisticsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pieces" />

            <TextView
                android:id="@+id/four_lines"
                style="@style/StatisticsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four_lines" />

            <TextView
                android:id="@+id/t_spins"
                style="@style/StatisticsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_spins" />

            <TextView
                android:id="@+id/combos"
                style="@style/StatisticsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/combos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_number"
                style="@style/StatisticsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/lines_number"
                style="@style/StatisticsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/pieces_number"
                style="@style/StatisticsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/four_lines_number"
                style="@style/StatisticsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/t_spins_number"
                style="@style/StatisticsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/combos_number"
                style="@style/StatisticsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>